feat(api): add ranged click events retrieval endpoint
* Implemented new endpoint to retrieve click events within a specified date range.
* Updated AnalyticsController to handle requests for ranged click events.
* Added corresponding use case and interactor for retrieving ranged click events.
* Enhanced ClickEvent and ClickEventResponse to include referer, location, and device information.
* Updated tests to cover new functionality and ensure correct behavior.